--- a/estilos.css
+++ b/estilos.css
@@ -4,7 +4,7 @@ body {
   font-family: sans-serif;
   font-size: 18px;
   margin: 0;
-  background-color: whitesmoke;
+  background-color: yellow;
 }
 
 main {
